crates/jarl-core/src/lints/any_duplicated/snapshots/jarl_core__lints__any_duplicated__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/any_duplicated/mod.rs
expression: "get_fixed_text(vec![\"any(duplicated(x))\", \"any(duplicated(foo(x)))\",\n\"any(duplicated(x), na.rm = TRUE)\",], \"any_duplicated\", None)"
---
OLD:
====
any(duplicated(x))
NEW:
====
anyDuplicated(x) > 0

OLD:
====
any(duplicated(foo(x)))
NEW:
====
anyDuplicated(foo(x)) > 0

OLD:
====
any(duplicated(x), na.rm = TRUE)
NEW:
====
anyDuplicated(x) > 0
