crates/jarl-core/src/lints/any_duplicated/snapshots/jarl_core__lints__any_duplicated__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/any_duplicated/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nany(duplicated(x))\",\n\"any(\\n  # comment\\n  duplicated(x)\\n)\",\n\"any(duplicated(\\n    # comment\\n    x\\n  ))\",\n\"any(duplicated(x)) # trailing comment\",], \"any_duplicated\", None)"
---
OLD:
====
# leading comment
any(duplicated(x))
NEW:
====
# leading comment
anyDuplicated(x) > 0

OLD:
====
any(
  # comment
  duplicated(x)
)
NEW:
====
any(
  # comment
  duplicated(x)
)

OLD:
====
any(duplicated(
    # comment
    x
  ))
NEW:
====
any(duplicated(
    # comment
    x
  ))

OLD:
====
any(duplicated(x)) # trailing comment
NEW:
====
anyDuplicated(x) > 0 # trailing comment
